refactored positioning for alignment fixes

--- a/src/components/help/help.scss
+++ b/src/components/help/help.scss
@@ -2,8 +2,8 @@
 
 .ui-help {
   color: $grey-dark-blue-70;
-  display: inline;
-  position: relative;;
+  display: inline-block;
+  position: relative;
   top: -2px;
   margin-left: 4px;
 }
