--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -7,12 +7,12 @@
   border-radius: 4px;
   box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.15);
   color: $white;
-  max-width: 640px;
-  min-width: 150px;
   padding: 10px;
   position: absolute;
   text-align: center;
   white-space: pre-wrap;
+  width: 300px;
+  z-index: 20;
 }
 
 .ui-tooltip__pointer {
